Fixed but where Start button was still clickable even when invisible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,7 @@ a.start-button {
     padding: 5px 30px;
     letter-spacing: 1px;
     opacity: 0;
+    display: none;
 }
 
 a.start-button:hover {
